crates/libs/frieze/tests/ui/enum_struct_variant_unsupported.rs
use frieze::Schema;

#[derive(Schema)]
enum Event {
    Login { user_id: i64 },
    Logout,
}

fn main() {}
